[gd_scene load_steps=5 format=3 uid="uid://bgp3c4gqy6urk"]

[ext_resource type="Script" uid="uid://ix57qkm07r2c" path="res://scripts/loading_screen.gd" id="1_k4u6n"]
[ext_resource type="Theme" uid="uid://cnr18uc8jarif" path="res://MyAssets/fonts/buttonTheme.tres" id="3_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pe18t"]
bg_color = Color(0.792157, 0.756863, 0.254902, 1)

[sub_resource type="Theme" id="Theme_2t34d"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_pe18t")

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_k4u6n")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="LoadingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 49
text = "LOADING..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 65)
layout_mode = 2
theme = SubResource("Theme_2t34d")
value = 50.0

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Preparing..."
horizontal_alignment = 1

[node name="SpinnerContainer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Spinner" type="TextureRect" parent="CenterContainer/VBoxContainer/SpinnerContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/SpinnerContainer/Spinner"]
